계산기 자바스크립트 추가 전까지

--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -13,12 +13,12 @@
     <form name="form">
 
         <!--계산의 결과값이 뜨는 화면-->
-        <input type="text" name="output"> 
+        <input type="text" name="output" readonly> <!--readonly -> 계산 결과가 출력되는 곳이니까 입력 불가능하게 하려고--> 
 
         <!--  계산기의 버튼 부분  -->
         <input type="button" class="clear" value="C"> <!--clear버튼 부분 -->
         <input type="button" class="operatior" value="/">
-        <input type="button" value="1">
+        <input type="button" value="1" onclick=""> <!-- 계산기 기능 추가할 수 있게 자바스크립트로 추가하는 부분부터 다시! -->
         <input type="button" value="2">
         <input type="button" value="3">
         <input type="button" class="operatior" value="*">
