--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -8,8 +8,15 @@
 </head>
 <body>
 
+    <h1>
+        <span>R</span><span>a</span><span>i</span><span>n</span><span>b</span><span>o</span><span>w</span><!--Rainbow-->
+        <span>C</span><span>a</span><span>l</span><span>c</span><span>u</span><span>l</span><span>a</span><span>t</span><span>o</span><span>r</span><span>&#127752;</span><!--calculator-->
+    </h1>
+    
 <!--계산기 그룹-->
 <div class="calculator"> 
+
+    
     <form name="form">
 
         <!--계산의 결과값이 뜨는 화면-->
