--- a/추가할것.html
+++ b/추가할것.html
@@ -10,6 +10,10 @@ https://www.creativosonline.org/ko/efectos-css-texto.html
 
 --rainbow_flow_css
 https://codepen.io/hendrysadrak/pen/VLMOMJ
+sass컴파일러때매 잘 안 됨
+
+진짜 참고한 것
+https://wsss.tistory.com/73
 
 
 -->
